--- a/sites/all/themes/slac/sass/components/_date.scss
+++ b/sites/all/themes/slac/sass/components/_date.scss
@@ -149,7 +149,9 @@ div.date-views-pager div.next-year {
   font-size: 0;
   color: color(grey-blue-light);
   background: url(../images/right-arrow.png) 82% -34% no-repeat;
-  transform: rotate(180deg);
+  -webkit-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .date-nav-wrapper .date-next {
